--- a/forum_v2/forum/static/forum/css/critical.css
+++ b/forum_v2/forum/static/forum/css/critical.css
@@ -5,7 +5,7 @@
 body{
 	background: #211e1e;
 	/*background: linear-gradient(45deg, #211e1e, #272424);*/
-	margin: 0px;
+	margin: 0;
 }
 
 .svg__list {
