--- a/forum_v2/forum/static/forum/css/comments_normal.css
+++ b/forum_v2/forum/static/forum/css/comments_normal.css
@@ -1,8 +1,7 @@
 
 
-
 .answer__field{
-    margin: 30px 30px 0px 30px;
+    margin: 30px 30px 0 30px;
 }
 
 .complaint__field{
@@ -22,7 +21,7 @@
     width: 400px;
     height: 300px;
     background: #232121;
-    color: #fff;
+    color: #ffffff;
     border-radius: 10px;
     padding: 20px;
 }
@@ -31,12 +30,12 @@
     justify-content: center;
 }
 .hedge_complaint__top_line{
-    background: white;
+    background: #ffffff;
     width: 100%;
     height: 1px;
 }
 .hedge_complaint__bottom_line{
-    background: white;
+    background: #ffffff;
     width: 80%;
     height: 1px;
     margin-top: 10px;
@@ -85,7 +84,7 @@
     flex-direction: row;
 }
 .comment__avatar {
-    border: 2px solid black;
+    border: 2px solid #000000;
     width: 3em;
     height: 3em;
 }
@@ -101,11 +100,11 @@
 }
 .comment__nickname{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #ffffff;
 }
 .preview-upload_date {
     display: block;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .comment_reply{
     display: flex;
@@ -133,8 +132,8 @@
     display: flex;
 }
 .comment__reply, .comment__movements, .comment__editing{
-    color: wheat;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    color: #f5deb3;
+    text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
     cursor: pointer;
 }
 .comment__reply{
@@ -205,7 +204,7 @@
 }
 
 .grade-standard{
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .grade-positive{
     color: #40e62d;
