--- a/forum_v2/forum/static/forum/css/dda_search_discussions.css
+++ b/forum_v2/forum/static/forum/css/dda_search_discussions.css
@@ -30,7 +30,7 @@
 
 .preview-upload_date{
     display: block;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 
 .preview-visitors{
@@ -43,21 +43,21 @@
 }
 .visitors__amount{
     margin-left: 2px;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 
 .preview-author{
     display: block;
     text-decoration: none;
-    color: rgb(254, 78, 78);
+    color: #fe4e4e;
 }
 
 .preview-theme{
     display: block;
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: #000000;
     font-size: 20px;
-    margin: 10px 0px 0px 10px;
+    margin: 10px 0 0 10px;
 }
 
 .preview-tags{
@@ -71,7 +71,7 @@
     padding: 2px 6px 2px 6px;
     margin: 10px 10px 0 0;
     border-radius: 10px 10px 10px 10px;
-    border: 2px solid black;
+    border: 2px solid #000000;
     background: #32d020;
     font-family: 'Comic Sans MS';
     font-size: 14px;
@@ -98,7 +98,7 @@
     display: block;
 }
 .grade-standard{
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .grade-positive{
     color: #40e62d;
@@ -109,16 +109,16 @@
 
 .preview-check{
     text-decoration: none;
-    color: wheat;
+    color: #f5deb3;
 }
 
 .custom__search__field{
     background: #585353;
-    box-shadow: inset 0 -5px 40px 40px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0 -5px 40px 40px #00000030;
 }
 .custom__preview{
     border-radius: 15px 15px 15px 15px;
-    box-shadow: inset 0 10px 20px 2px rgb(0 0 0 / 70%);
+    box-shadow: inset 0 10px 20px 2px #000000b3;
     border: 2px solid #f5deb37d;
 }
 .custom__theme{
@@ -126,7 +126,7 @@
 }
 
 .custom__check{
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
 }
 
 @media (max-width: 768px){
