--- a/forum_v2/forum/static/forum/css/discussion.css
+++ b/forum_v2/forum/static/forum/css/discussion.css
@@ -17,7 +17,7 @@
     padding-bottom: 20px;
 }
 .discussion__info{
-    border: 2px solid rgb(193, 193, 193);
+    border: 2px solid #c1c1c1;
     border-radius: 8px;
     margin: 25px;
     padding: 15px;
@@ -27,18 +27,18 @@
     justify-content: space-between;
 }
 .discussion__creation_date{
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .discussion__author{
     text-decoration: none;
-    color: rgb(254, 78, 78);
+    color: #fe4e4e;
 }
 .discussion__theme {
     display: block;
     text-decoration: none;
-    color: rgb(193, 193, 193);
+    color: #c1c1c1;
     font-size: 20px;
-    margin: 10px 0px 10px 10px;
+    margin: 10px 0 10px 10px;
 }
 .discussion__content{
 
@@ -127,7 +127,7 @@
     padding: 2px 6px 2px 6px;
     margin: 10px 10px 0 0;
     border-radius: 10px 10px 10px 10px;
-    border: 2px solid black;
+    border: 2px solid #000000;
     background: #32d020;
     font-family: 'Comic Sans MS';
     font-size: 14px;
@@ -140,12 +140,12 @@
     justify-content: center;
 }
 .hedge__first-line{
-    background: white;
+    background: #ffffff;
     width: 100%;
     height: 1px;
 }
 .hedge__second-line{
-    background: white;
+    background: #ffffff;
     width: 80%;
     height: 1px;
     margin-top: 10px;
@@ -156,8 +156,8 @@
     display: flex;
     justify-content: center;
     margin: 30px;
-    padding: 0px 20px 20px 20px;
-    color: rgb(219, 219, 219);
+    padding: 0 20px 20px 20px;
+    color: #dbdbdb;
 }
 
 
