--- a/forum_v2/forum/static/forum/css/header.css
+++ b/forum_v2/forum/static/forum/css/header.css
@@ -8,7 +8,7 @@
 .header__logo{
     display: flex;
     z-index: 3;
-    margin: 0px 0px 0px 20px;
+    margin: 0 0 0 20px;
 }
 
 .header__list{
@@ -16,25 +16,25 @@
     display: flex;
     flex-grow: 1;
     justify-content: space-around;
-    padding: 0px;
+    padding: 0;
 }
 
 .header__item{
     display: block;
     text-decoration: none;
-    color: wheat;
+    color: #f5deb3;
     font-size: 20px;
     padding: 1em;
 }
 
 .mouse-aiming:hover{
-    background:wheat;
-    color: black !important;
+    background: #f5deb3;
+    color: #000000 !important;
 }
 
 .mouse-aiming:hover > a{
-    background:wheat;
-    color: black;
+    background: #f5deb3;
+    color: #000000;
 }
 
 .header__for-user{
@@ -111,8 +111,8 @@
     cursor: pointer;
     margin: 0 3px 0 3px;
     padding: 1px 5px 1px 5px;;
-    border: 1px solid rgb(171 171 171);
-    color: rgb(171 171 171);
+    border: 1px solid #ababab;
+    color: #ababab;
     border-radius: 12px;
 }
 .subject__item.active{
@@ -188,7 +188,7 @@
     text-align: center;
     justify-content: center;
     position: fixed;
-    background-color: black;
+    background-color: #000000;
     left: -768px;
     width: 100%;
     height: 100%;
@@ -202,7 +202,7 @@
     text-decoration: none;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
-    color: white;
+    color: #ffffff;
 }
 
 #menu__toggle:checked ~ .dropdown {
@@ -211,7 +211,7 @@
 }
 
 #menu__toggle:checked ~ .menu__button > .menu__bar:nth-child(1){
-    background: white;
+    background: #ffffff;
     transition: transform 0.3s ease;
     transform: rotate(-45deg);
     transform-origin: right top;
@@ -220,7 +220,7 @@
     opacity: 0;
 }
 #menu__toggle:checked ~ .menu__button > .menu__bar:nth-child(3){
-    background: white;
+    background: #ffffff;
     transition: transform 0.3s ease;
     transform: rotate(45deg);
     transform-origin: right bottom;
