--- a/forum_v2/forum/static/forum/css/pagination.css
+++ b/forum_v2/forum/static/forum/css/pagination.css
@@ -3,7 +3,7 @@
     justify-content: center;
     margin: 30px;
     padding: 0 20px 20px 20px;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .pagination__profile{
     display: flex;
@@ -16,14 +16,14 @@
     display: flex;
     justify-content: center;
     margin: 0 30px 30px 30px;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 .pagination__link{
     text-decoration: none;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
     padding: 0 10px 0 10px;
     margin: 0 5px 0 5px;
-    border: 1px solid rgb(219, 219, 219);
+    border: 1px solid #dbdbdb;
     border-radius: 10px;
 }
 .link__unclickable{
