--- a/forum_v2/forum/static/forum/css/polit_test.css
+++ b/forum_v2/forum/static/forum/css/polit_test.css
@@ -31,12 +31,12 @@
     margin: 20px 0 20px 0;
 }
 .hedge__first-line{
-    background: white;
+    background: #ffffff;
     width: 100%;
     height: 1px;
 }
 .hedge__second-line{
-    background: white;
+    background: #ffffff;
     width: 80%;
     height: 1px;
     margin-top: 10px;
@@ -75,7 +75,7 @@
     padding: 3px 9px 3px 9px;
     background: #1c1c1d;
     border-radius: 7px;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
     user-select: none;
 }
