--- a/forum_v2/forum/static/forum/css/start_page.css
+++ b/forum_v2/forum/static/forum/css/start_page.css
@@ -17,13 +17,13 @@
     display: block;
     width: 75%;
     background: #585353;
-    box-shadow: inset 0px 10px 20px 40px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0 10px 20px 40px #0000003f;
 }
 
 .section{
     display: flex;
     flex-direction: column;
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0 0 0 0;
     border: 6px double #cacaca;
     margin: 50px;
     padding: 20px 20px 10px 20px;  
@@ -34,7 +34,7 @@
     justify-content: center;
     font-size: 20px;
     color: #ecd526;
-    margin: 5px 0px 5px 0px;
+    margin: 5px 0 5px 0;
 }
 
 .title{
@@ -49,7 +49,7 @@
 
 .section__upload_date{
     display: block;
-    color: rgb(219, 219, 219);
+    color: #dbdbdb;
 }
 
 @media (max-width: 768px){
