--- a/forum_v2/forum/static/forum/css/critical.css
+++ b/forum_v2/forum/static/forum/css/critical.css
@@ -2,10 +2,28 @@
     box-sizing: border-box;
 }
 
-body{
-	background: #211e1e;
-	/*background: linear-gradient(45deg, #211e1e, #272424);*/
-	margin: 0;
+:root {
+    --background: #211e1e;
+    --header-bg: #4f4b4b;
+    --theme-color-discussion: #000000;
+    --content-fields-bg: #585353;
+    --search-field-bg: #332f2f;
+    --advanced-search-bg: #332f2f;
+}
+
+html[data-mode=dark] {
+    --background: #19191f;
+    --header-bg: #000000;
+    --theme-color-discussion: #ffffff;
+    --content-fields-bg: #252d45;
+    --search-field-bg: #252d45;
+    --advanced-search-bg: #252d45;
+}
+
+body {
+    background: var(--background);
+    /*background: linear-gradient(45deg, #211e1e, #272424);*/
+    margin: 0;
 }
 
 .svg__list {
@@ -17,3 +35,9 @@ body{
     width: 0;
     height: 0;
 }
+
+
+
+
+
+
