--- a/forum_v2/forum/static/forum/css/dda_search_discussions.css
+++ b/forum_v2/forum/static/forum/css/dda_search_discussions.css
@@ -49,13 +49,13 @@
 .preview-author{
     display: block;
     text-decoration: none;
-    color: #fe4e4e;
+    color: #f94040;
 }
 
-.preview-theme{
+.preview-theme {
     display: block;
     text-decoration: none;
-    color: #000000;
+    color: var(--theme-color-discussion);
     font-size: 20px;
     margin: 10px 0 0 10px;
 }
@@ -112,8 +112,8 @@
     color: #f5deb3;
 }
 
-.custom__search__field{
-    background: #585353;
+.custom__search__field {
+    background: var(--content-fields-bg);
     box-shadow: inset 0 -5px 40px 40px #00000030;
 }
 .custom__preview{
