stable version 1.1 completed dark theme with advanced searching

--- a/forum_v2/forum/static/forum/css/header.css
+++ b/forum_v2/forum/static/forum/css/header.css
@@ -231,17 +231,13 @@
     display: none;
 }
 
-/*
-#theme__toggle:checked ~ .theme__button{
-    transform: rotate(180deg);
-    transition: 0.3s ease;
-}*//*
-.theme__button.rotated {
-    transform: rotate(180deg);
-}
-*/
 [data-mode="dark"] .theme__button {
     transform: rotate(180deg);
+    transition: 0.3s ease;
+}
+
+[data-mode="light"] .theme__button {
+    transform: rotate(0deg);
     transition: 0.3s ease;
 }
 
