--- a/forum_v2/forum/static/forum/css/dda_search_discussions.css
+++ b/forum_v2/forum/static/forum/css/dda_search_discussions.css
@@ -18,7 +18,7 @@
 .preview{
     display: flex;
     flex-direction: column;
-    margin: 30px 30px 0 30px;
+    margin: 30px;
     padding: 20px 20px 10px 20px;
 }
 
