--- a/forum_v2/forum/static/forum/css/start_page.css
+++ b/forum_v2/forum/static/forum/css/start_page.css
@@ -16,7 +16,7 @@
 .search-field{
     display: block;
     width: 75%;
-    background: #585353;
+    background: var(--content-fields-bg);
     box-shadow: inset 0 10px 20px 40px #0000003f;
 }
 
@@ -26,10 +26,10 @@
     border-radius: 0 0 0 0;
     border: 6px double #cacaca;
     margin: 50px;
-    padding: 20px 20px 10px 20px;  
+    padding: 20px 20px 10px 20px;
 }
 
-.section__theme, .title{
+.section__theme, .title {
     display: flex;
     justify-content: center;
     font-size: 20px;
@@ -37,11 +37,15 @@
     margin: 5px 0 5px 0;
 }
 
-.title{
+.section__rules {
+    color: var(--theme-color-discussion);
+}
+
+.title {
     display: block;
 }
 
-.section__footer{
+.section__footer {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
