added scaling for mobile devices

--- a/forum_v2/forum/templates/forum/base.html
+++ b/forum_v2/forum/templates/forum/base.html
@@ -7,6 +7,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'forum/css/critical.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'forum/css/header.css' %}">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% block additional_css %} {% endblock additional_css %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
